turtleart.housetree.HouseTree.scala.error
Erreur de compilation :
HouseTree:2: error: not found: value baisseBrossse
  baisseBrossse()
  ^