turtleart.housetree.HouseTree.scala.code
def r() {
  baisseBrossse()
  forward(100)
  right(30)
  forward(100)
  right(120)
  forward(100)
  right(120)
  forward(100)
  left(180)
  forward(100)
  right(90)
  forward(100)
  right(90)
  forward(100)
  right(90)
  leveBrosse()
}

override def run() {
  r()
}